# microdsp

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  disassemble.sh
.github/workflows/: rust.yml
benches/: main.rs  pitch_detection_result.rs  result.rs
dev_helpers/: Cargo.toml
dev_helpers/src/: audio.rs  lib.rs  wav.rs  websocket.rs
examples/: mpm.rs  nlms_cancellation.rs  nlms_delay_estimate.rs  nlms_echo_cancellation.rs  sfnov.rs  snov.rs
examples/browser_gui/: audio.rs  gui.html  gui.js  index.html  main.rs  mainz.rs  ws_server.rs
examples/browser_gui/js/: canvas-base.js  gui.js  nsdf-canvas.js  palette.js  piano-canvas.js  pitch-canvas.js
examples/live_input/: main.rs
examples/profiling/: main.rs
micro_ear_wasm/: Cargo.toml
micro_ear_wasm/src/: lib.rs
microdsp_wrapper/: Cargo.toml
microdsp_wrapper/src/: lib.rs  mpm.rs  snov.rs
microear_wasm/src/: lib.rs
src/: detector.rs  equal_loudness_filter.rs  key_maximum.rs  lib.rs  pitch_detection_result.rs  pitch_detector.rs  result.rs  util.rs
src/common/: autocorr.rs  f32_array_ext.rs  fft.rs  midi.rs  mod.rs  window.rs  window_function.rs  window_processor.rs
src/mpm/: detector.rs  key_max.rs  key_maximum.rs  mod.rs  mpm_pitch_detector.rs  result.rs  util.rs
src/nlms/: mod.rs  nlms_filter.rs
src/sfnov/: compression_function.rs  mod.rs  spectral_flux.rs  spectral_flux_novelty_detector.rs
src/snov/: compression.rs  compression_function.rs  detector.rs  mod.rs  novelty.rs  spectral_flux.rs  spectral_flux_novelty_detector.rs
web_demo/: build_wasm.sh  serve_demo.sh  wasm
