[package]
name = "microdsp"
version = "0.1.0-alpha"
authors = ["Per Gantelius <per@stuffmatic.com>"]
edition = "2018"
description = "TODO"
repository = "https://github.com/stuffmatic/microdsp/"
license = "MIT"
categories = ["no-std", "multimedia::audio", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
dev_helpers = { path = "dev_helpers" }

[[bench]]
name = "main"
harness = false

[dependencies]
microfft = { version = "0.4.0" }
micromath = { version = "2.0.0" }
