[package]
name = "microdsp"
version = "0.1.0"
authors = ["Per Gantelius <per@stuffmatic.com>"]
edition = "2018"
description = "DSP algorithms and utilities. Performant, embedded friendly and no_std compatible."
repository = "https://github.com/stuffmatic/microdsp/"
license = "MIT"
categories = ["no-std", "multimedia::audio", "embedded"]
keywords=["dsp", "embedded", "audio"]
resolver = "2"
exclude=["/example_data", "/papers"]

[dev-dependencies]
criterion = "0.3"
dev_helpers = { path = "dev_helpers" }
rand = "0.8.5"

[[bench]]
name = "main"
harness = false

[dependencies]
microfft = { version = "0.4.0" }
micromath = { version = "2.0.0" }
