[package]
name = "micro_ear_wasm"
version = "0.1.0"
authors = ["Per <per@stuffmatic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-ear = { path = "./.."}
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]